--- a/releases/targets.yaml
+++ b/releases/targets.yaml
@@ -1,5 +1,5 @@
 # This file is a computer readable form of REP 3 http://www.ros.org/reps/rep-0003.html
-- electric: ['lucid', 'maverick', 'natty', 'oneiric']
+- electric: ['lucid', 'natty', 'oneiric']
 - fuerte: ['lucid', 'oneiric', 'precise']
 - groovy: ['oneiric', 'precise', 'quantal']
 - hydro: ['precise', 'quantal', 'raring']
